# jery

./: .gitignore  LICENSE  README.md
.github/workflows/: workflow.yml
agent/: Dockerfile  README.md  docker-compose.yml  main.py
backend/: Dockerfile  docker-compose.yml  entrypoint.sh  example.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 446396f173a5_.py  7a8f036b8b88_initiale_commit.py  7bdd5dd1c282_.py  89c6902d8206_.py  c0ced1692df3_.py  c999fccc3587_ajoute_des_optional_keys.py  d43841b3d37c_.py
backend/api/: agent_routes.py  auth_routes.py  connection_manager.py  helpers.py  metric_routes.py  models.py  routes.py  schemas.py  server_routes.py
backend/config/: database.py  jwt.py  main.py
frontend/: .env.example  .prettierrc  Dockerfile  docker-compose.yml  next.config.ts  package-lock.json  package.json
frontend/src/app/: RobotGuide.tsx  Window.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: AuthHistories.tsx  RouteChangeListener.tsx
frontend/src/components/account/: MetricChart.tsx  MetricView.tsx  ProcessSidebar.tsx  ServerDetail.tsx  ServerList.tsx  UsageBar.tsx
frontend/src/redux/: Provider.tsx  accountSlice.ts  hooks.ts  store.ts  uiSlice.ts
frontend/src/services/: api.ts  auth.ts  webSocketService.ts
frontend/src/utils/: helpes.ts  types.ts
