[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fast-jwt-auth>=0.1.6",
    "fastapi[standard]>=0.116.2",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.25",
    "bcrypt<4.1.0",
    "passlib>=1.7.4",
]
